Edited wiki page MainPage through web user interface.

--- a/wiki/MainPage.wiki
+++ b/wiki/MainPage.wiki
@@ -1,13 +1,9 @@
-#summary One-sentence summary of this page.
+#summary Main information.
 
 = Introduction =
 
-Add your content here.
+This is the Main Page. Before you can start working, you need to set up a POL 098 environment. You will need to download a POL 097 distro and the POL 098 binaries. They include documentation on how to generate the realms and set things up.
 
+After that, you delete the pkg and scripts from that, and add the WoD scripts for POL 098 from the SVN repository. 
 
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+If you need more help, contact me and I will guide you.
