Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,4 +1,4 @@
 #summary Table of Contents
 
-[MainPage Main Page]
-[CurrentTasks Current Tasks]
+* [MainPage Main Page]
+* [CurrentTasks Current Tasks]
