--- a/wiki/CurrentTasks.wiki
+++ b/wiki/CurrentTasks.wiki
@@ -9,7 +9,7 @@ What we are doing is converting all of these scripts to POL 099 and update them 
 
 = Details =
 
-  * Remove all those misleading credits placed in the pkg.cfg files. The author isn't JaceAce, it's either Drocket or Dundee, check the 095 scripts. JaceAce would count as a maintainer at most. But now WE are the maintainers.
+  * Remove all those misleading credits placed in the pkg.cfg files. The author isn't JaceAce, it's either Drocket or Dundee, check the 095 scripts. JaceAce would count as a maintainer at most. But now WE are the maintainers, so he becomes a past contributor, author of the original conversion, but not the scripts.
 
   * Verify the functionality of each entry in the pkg folder. It should work as in the 095 version. Several scripts are outdated and need deletion, full replacement, and patching to replace deprecated POL functions with the new ones.
 
