--- a/wiki/CurrentTasks.wiki
+++ b/wiki/CurrentTasks.wiki
@@ -22,7 +22,7 @@ Each one of us should pick one by one the folders inside 095\pkg and compare the
 Here is the package list and those assigned to them in parenthesis:
   * attributes
   * character
-  * combat
+  * combat (Agata)
   * commands
   * drocket
   * dundee
@@ -30,7 +30,7 @@ Here is the package list and those assigned to them in parenthesis:
   * items
   * magic
   * merchants_database
-  * npcs (Agata)
+  * npcs (*finished by Agata*)
   * quests
   * skills
   * world
