--- a/wiki/CurrentTasks.wiki
+++ b/wiki/CurrentTasks.wiki
@@ -21,7 +21,7 @@ Each one of us should pick one by one the folders inside 095\pkg and compare the
 
 Here is the package list and those assigned to them in parenthesis:
   * attributes
-  * character
+  * character (Agata)
   * combat (*finished by Agata*)
   * commands
   * drocket (*finished by Agata*)
@@ -33,4 +33,4 @@ Here is the package list and those assigned to them in parenthesis:
   * npcs (*finished by Agata*)
   * quests (*finished by Agata*)
   * skills (*finished by Agata*)
-  * world (Agata)
+  * world (*finished by Agata*)
