--- a/wiki/CurrentTasks.wiki
+++ b/wiki/CurrentTasks.wiki
@@ -20,10 +20,10 @@ What we are doing is converting all of these scripts to POL 099 and update them 
 Each one of us should pick one by one the folders inside 095\pkg and compare them with 099\pkg, and do the necesary work to accomplish the tasks mentioned above.
 
 Here is the package list and those assigned to them in parenthesis:
-  * attributes (Agata)
+  * attributes (*finished by Agata*)
   * character (*finished by Agata*)
   * combat (*finished by Agata*)
-  * commands
+  * commands (Agata)
   * drocket (*finished by Agata*)
   * dundee (*finished by Agata*)
   * guilds (*finished by Agata*)
