--- a/wiki/CurrentTasks.wiki
+++ b/wiki/CurrentTasks.wiki
@@ -23,7 +23,7 @@ Here is the package list and those assigned to them in parenthesis:
   * attributes (*finished by Agata*)
   * character (*finished by Agata*)
   * combat (*finished by Agata*)
-  * commands (Agata)
+  * commands (*finished by Agata*)
   * drocket (*finished by Agata*)
   * dundee (*finished by Agata*)
   * guilds (*finished by Agata*)
@@ -36,7 +36,7 @@ Here is the package list and those assigned to them in parenthesis:
   * world (*finished by Agata*)
 
 Additionally there is the scripts folder with the following entries:
-  * ai
+  * ai (Agata)
   * console
   * control
   * include
