--- a/wiki/CurrentTasks.wiki
+++ b/wiki/CurrentTasks.wiki
@@ -39,6 +39,6 @@ Additionally there is the scripts folder with the following entries:
   * ai (*finished by Agata*)
   * console
   * control (*finished by Agata*)
-  * include
-  * items (Agata)
+  * include (Agata)
+  * items (*finished by Agata*)
   * misc (*finished by Agata*)
