Edited wiki page CurrentTasks through web user interface.

--- a/wiki/CurrentTasks.wiki
+++ b/wiki/CurrentTasks.wiki
@@ -37,8 +37,8 @@ Here is the package list and those assigned to them in parenthesis:
 
 Additionally there is the scripts folder with the following entries:
   * ai (*finished by Agata*)
-  * console
   * control (*finished by Agata*)
   * include (Agata)
   * items (*finished by Agata*)
   * misc (*finished by Agata*)
+  * www (*finished by Agata)
