--- a/wiki/CurrentTasks.wiki
+++ b/wiki/CurrentTasks.wiki
@@ -38,7 +38,7 @@ Here is the package list and those assigned to them in parenthesis:
 Additionally there is the scripts folder with the following entries:
   * ai (*finished by Agata*)
   * control (*finished by Agata*)
-  * include (Agata)
+  * include (*finished by Agata*)
   * items (*finished by Agata*)
   * misc (*finished by Agata*)
   * www (*finished by Agata)
