Edited wiki page CurrentTasks through web user interface.

--- a/wiki/CurrentTasks.wiki
+++ b/wiki/CurrentTasks.wiki
@@ -11,7 +11,7 @@ What we are doing is converting all of these scripts to POL 099 and update them 
 
   * Remove all those misleading credits placed in the pkg.cfg files. The author isn't JaceAce, it's either Drocket or Dundee, check the 095 scripts. JaceAce would count as a maintainer at most. But now WE are the maintainers, so he becomes a past contributor, author of the original conversion, but not the scripts.
 
-~~  * Verify the functionality of each entry in the pkg folder. It should work as in the 095 version. Several scripts are outdated and need deletion, full replacement, and patching to replace deprecated POL functions with the new ones.~~ *Done*
+  * ~~Verify the functionality of each entry in the pkg folder. It should work as in the 095 version. Several scripts are outdated and need deletion, full replacement, and patching to replace deprecated POL functions with the new ones.~~ *Done*
 
   * Make sure everything is realm aware. Currently it uses {{{_DEFAULT_REALM}}}; this should be replaced with the _realm_ property of the character, npc or object in question to permit us to expand to the other realms in the future. There are also some core functions which use a default value when no realm is specified; make sure the realm is always specified.
 
