Edited wiki page CurrentTasks through web user interface.

--- a/wiki/CurrentTasks.wiki
+++ b/wiki/CurrentTasks.wiki
@@ -17,4 +17,4 @@ What we are doing is converting all of these scripts to POL 099 and update them 
 
   * Watch out for removed items. I have found and added some, you may find more.
 
-  * Check objtype numbers. Many of them need to be moved upwards. The range between 0x4000 and 0xFFFF was previously used for multis and custom items, now item graphics were expanded and cover that whole range too. Recommendation is to add 0x10000 to the old objtype number and add an OldObjType property with the old number to each modified item entry. The OldObjType property will be necesary once for the migration process, and will be removed after that, so we will need both files with and without them. As for the boats and houses, please leave them the way they are, I will take care of that myself, it's delicate and tricky stuff (Agata).
+  * Check objtype numbers. Many of them need to be moved upwards. The range between 0x4000 and 0xFFFF was previously used for multis and custom items, now item graphics were expanded and cover that whole range too. Recommendation is to add 0x10000 to the old objtype number and add an OldObjType property with the old number to each modified item entry. The OldObjType property will be necesary once for the migration process, and will be removed after that, so we will need both files with and without them, as some new item objtypes will overlap with the OldObjType numbers. As for the boats and houses, please leave them the way they are, I will take care of that myself, it's delicate and tricky stuff (Agata).
